--- a/helloWorld/src/app/app.component.html
+++ b/helloWorld/src/app/app.component.html
@@ -16,5 +16,10 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+  <!-- Llama al selector primer componente ts-->
+
 </ul>
+<app-primer-componente>
+
+</app-primer-componente>
 
