--- a/helloWorld/src/app/app.component.html
+++ b/helloWorld/src/app/app.component.html
@@ -16,10 +16,11 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-  <!-- Llama al selector primer componente ts-->
 
 </ul>
+<!-- Llama al selector primer componente ts-->
 <app-primer-componente>
 
 </app-primer-componente>
 
+<p> esto es un parrafo</p>
