--- a/helloWorld/src/app/primer-componente/primer-componente.component.html
+++ b/helloWorld/src/app/primer-componente/primer-componente.component.html
@@ -30,8 +30,8 @@
 
   <ul>
     <!--for each cosa hasta mi array-->
-    <li *ngFor="let cosa of miArray">{{cosa}}
-      <!--opcion:{{cosa}}-->
+    <li *ngFor="let cosa of miArray">
+      opcion:{{cosa}}
     </li>
     </ul>
 </div>
