--- a/starWars/src/app/personaje/personaje.component.html
+++ b/starWars/src/app/personaje/personaje.component.html
@@ -1,3 +1,28 @@
-<p>
-  personaje works!
-</p>
+
+<table id="personajes" class="estilo_Tabla_1">
+  <caption>Personajes STAR WARS</caption>
+  <thead>
+  <tr>
+    <th>Nombre</th>
+    <th>Altura</th>
+    <th>Peso</th>
+    <th>Nacimiento</th>
+    <th>Género</th>
+    <th>Homeworld</th>
+  </tr>
+  </thead>
+  <tbody>
+
+  <!-- form para crear las lista/ ejemplo de peticiones ajax-->
+
+  <tr *ngFor='let p of listaPer'>
+    <td>{{p.name}}</td>
+    <td>{{p.height}}</td>
+    <td>{{p.birth_year}}</td>
+    <td>{{p.gender}}</td>
+    <td>{{p.homeworld}}</td>
+
+  </tr>
+
+  </tbody>
+</table>
