--- a/starWars/src/app/app.component.html
+++ b/starWars/src/app/app.component.html
@@ -1,10 +1,11 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Personaje de Star Wars
-  </h1>
+<div style="text-align: center">
+  <h2>
+    Personajes de Star Wars
+  </h2>
 </div>
 
-<h2> Lista Personajes</h2>
+<h3>Lista de personajes</h3>
+<app-personajes></app-personajes>
 
-<app-personaje></app-personaje>
+
+
