--- a/BootcampTaller4/src/app/components/owners-detalle/owners-detalle.component.html
+++ b/BootcampTaller4/src/app/components/owners-detalle/owners-detalle.component.html
@@ -1,4 +1,18 @@
-<p>
-  Adress:{{detalle.address}}
-  City:{{detalle.city}}
-</p>
+<table class="table table-dark">
+  <tr>
+    <th>Nombre </th>
+    <td>{{owner.firstName}}</td>
+  </tr>
+  <tr>
+    <th>Address </th>
+    <td>{{owner.address}}</td>
+  </tr>
+  <tr>
+    <th>City </th>
+    <td>{{owner.city}}</td>
+  </tr>
+  <tr>
+    <th>Telephone </th>
+    <td>{{owner.telephone}}</td>
+  </tr>
+</table>
