--- a/BootCampTaller5/src/app/components/form-owner/form-owner.component.html
+++ b/BootCampTaller5/src/app/components/form-owner/form-owner.component.html
@@ -33,9 +33,18 @@
 
     <div class="form-group">
       <label>Ciudad</label>
-      <input type="text" class="form-control" required [(ngModel)]="owner.city" name="telephone" #city="ngModel"
+      <input type="text" class="form-control" required [(ngModel)]="owner.city" name="city" #city="ngModel"
              placeholder="Introduce la ciudad">
       <div [hidden]="city.valid || city.pristine" class="alert alert-danger">
+        Es obligatorio
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label>Direccion</label>
+      <input type="text" class="form-control" required [(ngModel)]="owner.address" name="address" #address="ngModel"
+             placeholder="Introduce la address">
+      <div [hidden]="address.valid || address.pristine" class="alert alert-danger">
         Es obligatorio
       </div>
     </div>
