--- a/BootCampTaller5/src/app/components/home/home.component.html
+++ b/BootCampTaller5/src/app/components/home/home.component.html
@@ -1,5 +1,4 @@
 <div>
-  <h2>Taller de Angula en home</h2>
-  <h4>Bienvenido al Taller de Angula</h4>
+  <h2>Bienvenido al Taller 5 de Angula</h2>
   <p> Aqui vamos a trabajar con Angular</p>
 </div>
