--- a/BootCampTaller5/src/app/components/owners-detalle/owners-detalle.component.html
+++ b/BootCampTaller5/src/app/components/owners-detalle/owners-detalle.component.html
@@ -16,4 +16,11 @@
     <th>Telephone </th>
     <td>{{owner.telephone}}</td>
   </tr>
+
 </table>
+
+<!--botton para eliminar owner / meto el codigo del click en owner.ts-->
+<button type="button" (click)="del(p)">Delete</button>
+
+<!--botton para eliminar owner-->
+<button type="button" (click)="upd(p)">Update </button>
