--- a/BootCampTaller5/src/app/components/owners/owners.component.html
+++ b/BootCampTaller5/src/app/components/owners/owners.component.html
@@ -23,5 +23,12 @@
       {{p.lastName}} -
       {{p.city}}
     </a>
+
+<!--botton para eliminar owner / meto el codigo del click en owner.ts-->
+    <button type="button" (click)="del(p)">Delete</button>
+
+    <!--botton para eliminar owner-->
+    <button type="button" (click)="upd(p.id)">Update </button>
   </li>
 </ul>
+
