--- a/BootCampTaller5/src/app/components/owners-detalle/owners-detalle.component.html
+++ b/BootCampTaller5/src/app/components/owners-detalle/owners-detalle.component.html
@@ -20,7 +20,7 @@
 </table>
 
 <!--botton para eliminar owner / meto el codigo del click en owner.ts-->
-<button type="button" (click)="del(p)">Delete</button>
+<button type="button" (click)="del(owner)">Delete</button>
 
 <!--botton para eliminar owner-->
-<button type="button" (click)="upd(p)">Update </button>
+<button type="button" (click)="upd(owner.id)">Update </button>
