--- a/BootCampTaller5/src/app/components/vets/vets.component.html
+++ b/BootCampTaller5/src/app/components/vets/vets.component.html
@@ -3,13 +3,18 @@
 
 <h3>Vets:</h3>
 <ul>
-  <!--recorre el array owners-->
+  <!--recorre el array vet-->
   <li *ngFor="let v of vets">
     <a href="#">
       {{v.id}}
       {{v.firstName}} -
       {{v.lastName}}
     </a>
-  </li>
 
+ <!--botton para eliminar owner / meto el codigo del click en owner.ts-->
+  <button type="button" (click)="del(v)">Delete</button>
+
+  <!--botton para eliminar owner-->
+  <button type="button" (click)="upd(v.id)">Update </button>
+  </li>
 </ul>
