--- a/BootCampTaller5/src/styles.css
+++ b/BootCampTaller5/src/styles.css
@@ -1,9 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 input.ng-valid {
-  border-left: 5px solid red;
+  border-left: 5px solid #07ff20;
 }
-input.ng-valid{
+input.ng-invalid{
   border-left: 5px solid red;
-  border-color: red;
-  /*box-shadow: inset 0 1px 1px rgba(0 ,0,0, .075) rgba(169, 68, 66 .6);*/
 }
