--- a/bootcamptallerangular5/src/app/app.component.html
+++ b/bootcamptallerangular5/src/app/app.component.html
@@ -24,7 +24,7 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/vets">Veterinarios <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/veterinarios">Veterinarios <span class="sr-only"></span></a>
       </li>
 
       <li class="nav-item active">
